--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - uses: actions/cache@v2
-      name: Configure pip caching
+    - name: Configure pip caching
+      uses: actions/cache@v2
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -26,6 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install -r requirements.txt
+    - name: see Github context
+      run: echo "$GITHUBT_CONTEXT"
     - name: Commit and Push new README.md to the repository
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
