--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install -r requirements.txt
     - name: see Github context
-      run: echo "$GITHUBT_CONTEXT"
+      run: echo ${{ github.actor }}
     - name: Commit and Push new README.md to the repository
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
