--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Commit and push if README changed
       run: |-
         git diff
-        git config --global user.email "readme-bot@example.com"
-        git config --global user.name "README-bot"
+        git config --global user.email "actions@users.noreply.github.com"
+        git config --global user.name "Automated"
         git diff --quiet || (git add README.md && git commit -m "Updated README")
         git push
