--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Upgrade pip
+    - name: Install older version of pip
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install pip==20.2.4
     - name: Install dependencies
       run: |
         python -m pip install -r requirements.txt
