--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         python -m pip install -r requirements.txt
     - name: Build README.md
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ENV_TOKEN: ${{ secrets.ENV_TOKEN }}
       run: |-
         python build_readme.py
         cat README.md
